--- a/bungol/templates/index.html
+++ b/bungol/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{title}}</title>
+    <title>{title}</title>
     <style>
         #container {{
             max-width: 840px;
